# rapide

./: .gitignore  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  tox.ini
rapide/: __init__.py  cache.py  core.py  env.py  shared.py
rapide/backend/: disk.py  redis.py
tests/: test_sync.py
